# dotfiles

./: .dir-locals.el  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .sops.yaml  README.md  captive-portal.nu  config.yaml  flake.nix  run.sh
X/: .Xresources  .xbindkeysrc
aria2/: aria2.conf  session.downloads
bash/: .bash_profile  .bashrc
checks/: alejandra.nix  deadnix.nix  default.nix  emacs.nix  lib.nix  lints.nix  lints.nu  lints.sh  nixfmt.nix  optimal-flake-lock.nu  shellcheck.nix  statix.nix
chromium/: .gitignore
dotfiles/: Xresources  bash_profile  bashrc  env  fonts.conf  gitconfig  mailcap  screenrc  termiterc  xbindkeysrc  zshenv  zshrc
emacs/: .emacs
git/: .gitconfig
gtk/: .gtkrc-2.0
home-config/: default.nix  non-nixos.nix  xdg-settings.nix
home-config/dotfiles/eww/desktop-logic/: Cargo.toml
home-config/dotfiles/eww/desktop-logic/src/: idle_inhibit.rs  lib.rs  main.rs  notifications.rs  tray.rs  virtual_sway.rs
home-config/dotfiles/eww/utils/: Cargo.toml  bluetooth-indicator.nu
home-config/dotfiles/eww/utils/src/: bluetooth_monitor.rs  lib.rs
home-modules/: firefox-webapp.nix  way-displays.nix
keys/: famedly-tlater.pub  tlater.pub
lib/: default.nix  pkgs.nix  pure.nix
modules/: cursor-theme.nix  default.nix
nixos-config/: bluetooth.nix  default.nix  dev.nix  greeter.nix  laptops.nix  pipewire.nix  power.nix  sway.nix  udev.nix  wifi.nix  wireguard.nix  yubikey.nix
nixpkgs/: default.nix  emacs.nix  helpers.nix  home.nix  profiles.nix  use-package-list.el
pkgs/: background.nix  cap.nix  commit-nvfetcher.nix  default.nix  dump-ics.nix  emacs.nix  firefox-ui-fix.nix  gauth.nix  get-drivestrike-version.nu  get-drivestrike-version.sh  lib.nix  nvfetcher.toml  oh-my-zsh-emacs.nix  oh-my-zsh-require-tool.nix  pass-rofi.nix  read-sops.nix  setup-wacom.nix  system-update.nix  (+2 more)
(+575 files in other folders)
