[package]
name = "desktop-logic"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
serde = { version = "1.0.225", features = ["derive"] }
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "time"] }
tokio-stream = "0.1.17"
zbus = "5.11.0"
zvariant = "5.7.0"
serde_json = "1.0.145"
thiserror = "2.0.16"
