[package]
name = "desktop-logic"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"
zbus = "5.11.0"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
thiserror = "2.0.17"
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.11"
tempfile = "3.23.0"
inotify = "0.11.0"
